force-app/main/default/objects/Sales_Order_Return_Line_Item__c/Sales_Order_Return_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Sales Order Return Line Item</label>
    <nameField>
        <displayFormat>SORLI-{00000}</displayFormat>
        <label>Sales Order Return Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Return Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>