force-app/main/default/objects/Sales_Order_Return_Line_Item__c/fields/CGST__c.field-meta.xml
<CustomField>
    <fullName>CGST__c</fullName>
    <label>CGST%</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>