force-app/main/default/objects/Sales_Order_Return_Line_Item__c/fields/Discount_Currency__c.field-meta.xml
<CustomField>
    <fullName>Discount_Currency__c</fullName>
    <formula>Total_Amount__c * Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>