force-app/main/default/objects/Sales_Order_Return_Line_Item__c/fields/Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Doc_No__c</fullName>
    <label>Doc No.</label>
    <referenceTo>Sales_Order_Return__c</referenceTo>
    <relationshipLabel>Sales Order Return Line Items</relationshipLabel>
    <relationshipName>Sales_Order_Return_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>