force-app/main/default/objects/Sales_Order_Return_Line_Item__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Sales Order Return Line Items</relationshipLabel>
    <relationshipName>Sales_Order_Return_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>