force-app/main/default/objects/Sales_Order_Return_Line_Item__c/fields/Unbooked_Stock_Qunatity__c.field-meta.xml
<CustomField>
    <fullName>Unbooked_Stock_Qunatity__c</fullName>
    <formula>Stock__r.Total_Unbooked_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unbooked Stock Qunatity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>